# rustc-bug-reproduce

./: Cargo.toml
src/: main.rs
